fix alignment of resize column

--- a/services/orchest-webserver/app/static/css/main.scss
+++ b/services/orchest-webserver/app/static/css/main.scss
@@ -973,6 +973,7 @@ span.code {
 
   .col-drag-resize {
     position: absolute;
+    top: 0;
     height: 100%;
     width: 10px;
     margin-left: -5px;
